# stonky

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json  portfolio.csv  pyproject.toml  server.js  start-backend.sh  start-frontend.sh
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_nullable_scan_run_fks.py  003_add_forecast_cache.py  004_add_synthesis_results.py  005_backtest_results.py  006_market_tables.py  93b895b01fc1_description.py
backend/app/: config.py  main.py  scheduler.py
backend/app/agents_common/: __init__.py  discord.py  notion_client.py  pricing.py  scheduler.py
backend/app/analysis/: chart_renderer.py  forecast_scanner.py  forecaster.py  pipeline.py  profiles.py  scoring.py  signal_aggregator.py  swing_points.py  synthesis_agent.py  synthesis_scanner.py  yolo_scanner.py  yolo_screener.py
backend/app/api/: backtests.py  forecasts.py  health.py  market.py  patterns.py  pipeline.py  scanner.py  stocks.py  synthesis.py  ta.py  ta_service.py  watchlist.py
backend/app/backtesting/: parameter_sweep.py  results.py  runner.py
backend/app/db/: __init__.py  session.py
backend/app/ingestion/: fetcher.py  sa_import.py
backend/app/llm/: __init__.py  provider.py
backend/app/market/: __init__.py  calendar_service.py  fred_client.py  indicators.py  ingestion.py  regime.py  sentiment.py
backend/app/models/: __init__.py  backtest.py  divergences.py  enums.py  forecast_cache.py  indicator_cache.py  ingestion_log.py  macro_series.py  market_regime.py  ohlcv.py  pattern_detections.py  sa_ratings.py  scan_profiles.py  scan_results.py  scan_runs.py  sentiment_data.py  signal_results.py  swing_points.py  symbols.py  synthesis_result.py  watchlists.py
backend/app/paper_trader/: __init__.py  discord.py  engine.py  notion_client.py  router.py  scheduler.py  schemas.py
backend/app/portfolio_monitor/: __init__.py  andon.py  engine.py  report.py  router.py  runner.py
backend/app/scheduler/: __init__.py  pipeline.py  progress.py
backend/app/schemas/: backtests.py  forecasts.py  indicators.py  market.py  patterns.py  scanner.py  stocks.py  synthesis.py  ta.py  watchlist.py
backend/app/services/: indicators_service.py  intraday_fetcher.py  price_service.py  scoring.py
backend/scripts/: smoke_test_observer.py  tc019_smoke_test.py
backend/tests/: conftest.py  factories.py  generators.py  golden_plugin.py
(+187 files in other folders)
