[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stonky-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pandas>=2.2.0",
    "pandas-ta>=0.3.14b0",
    "yfinance>=0.2.50",
    "httpx>=0.28.0",
    "apscheduler>=3.10.4,<4",
    "openpyxl>=3.1.0",
    "tzdata>=2024.1",
    "python-multipart>=0.0.12",
    "scipy>=1.14.0",
    "pyharmonics>=1.5.3",
    "urllib3>=2.0",
    "docker>=7.0",
    "ultralytics>=8.0.0",
    "mplfinance>=0.12.10b0",
    "huggingface_hub>=0.20.0",
    "chronos-forecasting>=1.0.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "testcontainers[postgres]>=4.8.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
ta = [
    # Requires system-level ta-lib installation: https://github.com/TA-Lib/ta-lib-python
    "ta-lib>=0.4.32",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N805"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:launch_ros -p no:launch_testing"
markers = [
    "unit: pure logic, no I/O",
    "integration: needs TimescaleDB container",
    "ta_validation: golden file comparison",
    "slow: tests taking >5s",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
